--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   line-height: 1.2;
+  text-transform: uppercase;
 }
 /* БОКС ДЛЯ ВСЕГО ЛИЦА */
 .face-layer {
@@ -424,3 +425,132 @@
   background-size: contain;
   background-position: center;
 } 
+/* БЛОК С НОСАМИ */
+.noses-row {
+  position: absolute;
+  top: calc(2 * 25vw);
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  height: 25vw;
+  z-index: 999;
+}
+
+.nose-atom {
+  width: 28vw;
+  height: 100%;
+  background-color: #FF8CBD;
+  border: 5px solid black;
+  flex-shrink: 0;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+.nose-atom:nth-of-type(1) {
+  background-color: #FF4431;
+  background-image: url('../images/yellow\ nose.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+.nose-atom:nth-of-type(2) {
+  background-color: #FF8CBD;
+  background-image: url('../images/red\ nose.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+.nose-atom:nth-of-type(3) {
+  background-color: #01B37F;
+  background-image: url('../images/big\ pink\ nose.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+.nose-atom:nth-of-type(4) {
+  background-color: #F7DE1C;
+  background-image: url('../images/green\ nose.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+.nose-atom:nth-of-type(5) {
+  background-color: #05C1F1;
+  background-image: url('../images/purple\ nose.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+.nose-atom:nth-of-type(6) {
+  background-color: #7A59A4;
+  background-image: url('../images/pink\ nose.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+.nose-atom:nth-of-type(7) {
+  background-color: #FF4431;
+  background-image: url('../images/blue\ nose.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+/* РОТ И РУКИ */
+.mouth-container {
+  position: absolute;
+  top: calc(2 * 25vw + 25vw); /* под носами */
+  left: 0;
+  width: 100vw;
+  height: 30vw;
+  z-index: 998;
+  display: flex; /* ← как в face-layer */
+}
+
+/* ЛЕВАЯ РУКА */
+.left-hand {
+  width: 25vw;
+  height: 28vw; /* чуть выше глаза */
+  background-color: #FF4431;
+  border: 5px solid black;
+  flex-shrink: 0;
+}
+.left-hand {
+  background-color: #FF4431;
+  background-image: url('../images/hand.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+/* РОТ */
+.mouth {
+  width: 50vw;
+  height: 28vw;
+  background-color: #F7DE1C;
+  border: 5px solid black;
+  flex-shrink: 0;
+}
+.mouth {
+  background-color: #F7DE1C;
+  background-image: url('../images/mouth closed.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+/* ПРАВАЯ РУКА */
+.right-hand {
+  width: 25vw;
+  height: 28vw;
+  background-color: #FF4431;
+  border: 5px solid black;
+  flex-shrink: 0;
+  transform: scaleX(-1); /* ← отзеркалить (если нужно) */
+}
+.right-hand {
+  background-color: #FF4431;
+  background-image: url('../images/hand.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
