--- a/css/style.css
+++ b/css/style.css
@@ -59,9 +59,7 @@
   text-transform: uppercase;
   line-height: 1;
   transform: translateY(-50%);
-
-  /* Анимация */
-  animation: scrollLeftToRight 5s linear infinite;
+  animation: scrollLeftToRight 7s linear infinite;
 }
 
 /* АНИМАЦИЯ */
@@ -326,7 +324,6 @@
 .center-left-panel .panel-atom {
   width: 100%;
   height: 25vw;
-  background-color: #f0f0f0;
   border: 5px solid #000000;
   flex-shrink: 0;
   background-repeat: no-repeat;
@@ -389,7 +386,6 @@
 .center-right-panel .panel-atom {
   width: 100%;
   height: 25vw;
-  background-color: #f0f0ff;
   border: 5px solid #000000;
   flex-shrink: 0;
   background-repeat: no-repeat;
@@ -653,7 +649,7 @@
   background-position: center;
 }
 
-/* ОБЩИЙ ТЕКСТ (можно вынести в отдельный класс) */
+/* ОБЩИЙ ТЕКСТ */
 .final-text {
   padding: 0 10px;
 }
