--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,9 @@
     box-sizing: border-box;
 }
 @font-face {
-  font-family: 'KvitkaSPDemo';
-  src: url('../fonts/KvitkaSPDemo.otf') format('opentype');
-  font-weight: normal;
+  font-family: 'AlumniSans';
+  src: url('../fonts/AlumniSans-Medium.ttf') format('truetype');
+  font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
@@ -53,10 +53,11 @@
   position: absolute;
   top: 50%;
   white-space: nowrap;
-  font-family: 'KvitkaSPDemo', sans-serif;
+  box-sizing: border-box;
+  font-family: 'AlumniSans', sans-serif;
+  font-weight: 500;
   font-size: 15vw;
   color: white;
-  text-transform: uppercase;
   line-height: 1;
   transform: translateY(-50%);
   animation: scrollLeftToRight 7s linear infinite;
@@ -179,7 +180,7 @@
     background-position: center;
 }
 /* УШИ СЛЕВА */
-.sidebar {
+.ears-left {
   position: absolute;
   top: 0;
   left: 0;
@@ -191,7 +192,7 @@
   transform: translateY(-25vw);
 }
 
-.sidebar-atom {
+.ear {
   width: 100%;
   height: 25vw;
   border: 5px solid rgb(0, 0, 0);
@@ -199,52 +200,34 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  z-index: 1;
 }
-.sidebar-atom:nth-of-type(1) {
-    background-color: #05C1F1;
-    background-image: url('../images/yellow\ ear.svg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
+
+.ear:nth-of-type(1) {
+  background-color: #05C1F1;
+  background-image: url('../images/yellow\ ear.svg');
 }
-.sidebar-atom:nth-of-type(2) {
-    background-color: #FF4431;
-    background-image: url('../images/blue\ ear.svg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
+.ear:nth-of-type(2) {
+  background-color: #FF4431;
+  background-image: url('../images/blue\ ear.svg');
 }
-.sidebar-atom:nth-of-type(3) {
-    background-color: #F7DE1C;
-    background-image: url('../images/purple\ ear.svg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
+.ear:nth-of-type(3) {
+  background-color: #F7DE1C;
+  background-image: url('../images/purple\ ear.svg');
 }
-.sidebar-atom:nth-of-type(4) {
-    background-color: #01B37F;
-    background-image: url('../images/pink\ ear.svg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
+.ear:nth-of-type(4) {
+  background-color: #01B37F;
+  background-image: url('../images/pink\ ear.svg');
 }
-.sidebar-atom:nth-of-type(5) {
-    background-color: #FF8CBD;
-    background-image: url('../images/red\ ear.svg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
+.ear:nth-of-type(5) {
+  background-color: #FF8CBD;
+  background-image: url('../images/red\ ear.svg');
 }
-.sidebar-atom:nth-of-type(6) {
-    background-color: #7A59A4;
-    background-image: url('../images/yellow\ big\ ear.svg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
+.ear:nth-of-type(6) {
+  background-color: #7A59A4;
+  background-image: url('../images/yellow\ big-ear.svg');
 }
 /* УШИ СПРАВА */
-.vertical-atoms-right {
+.ears-right {
   position: absolute;
   top: 0;
   right: 0;
@@ -256,10 +239,9 @@
   transform: translateY(-25vw);
 }
 
-.vertical-atoms-right .vertical-atom {
+.ears-right .ear {
   width: 100%;
   height: 25vw;
-  background-color: #05C1F1;
   border: 5px solid rgb(0, 0, 0);
   flex-shrink: 0;
   background-repeat: no-repeat;
@@ -267,47 +249,34 @@
   background-position: center;
   transform: scaleX(-1);
 }
-.vertical-atoms-right .vertical-atom:nth-of-type(1) {
+.ears-right .ear:nth-of-type(1) {
   background-color: #05C1F1;
   background-image: url('../images/yellow ear.svg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
 }
-.vertical-atoms-right .vertical-atom:nth-of-type(2) {
+
+.ears-right .ear:nth-of-type(2) {
   background-color: #FF4431;
   background-image: url('../images/blue ear.svg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
 }
-.vertical-atoms-right .vertical-atom:nth-of-type(3) {
+
+.ears-right .ear:nth-of-type(3) {
   background-color: #F7DE1C;
   background-image: url('../images/purple ear.svg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
 }
-.vertical-atoms-right .vertical-atom:nth-of-type(4) {
+
+.ears-right .ear:nth-of-type(4) {
   background-color: #01B37F;
   background-image: url('../images/pink ear.svg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
 }
-.vertical-atoms-right .vertical-atom:nth-of-type(5) {
+
+.ears-right .ear:nth-of-type(5) {
   background-color: #FF8CBD;
   background-image: url('../images/red ear.svg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
 }
-.vertical-atoms-right .vertical-atom:nth-of-type(6) {
+
+.ears-right .ear:nth-of-type(6) {
   background-color: #7A59A4;
   background-image: url('../images/yellow big ear.svg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
 }
 /* ГЛАЗА СЛЕВА */
 .center-left-panel {
@@ -596,45 +565,55 @@
   flex-direction: column;
 }
 
-/* ТЕКСТОВЫЕ ПРЯМОУГОЛЬНИКИ */
+/* ОБЩИЙ СТИЛЬ ДЛЯ ВСЕХ БЛОКОВ С ТЕКСТОМ */
 .final-bar {
   width: 100%;
+  height: 15vmin;
   border: 5px solid black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   box-sizing: border-box;
-  font-family: 'KvitkaSPDemo', sans-serif;
-  text-align: center;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  text-transform: uppercase;
+  font-family: 'AlumniSans', sans-serif;
+  font-weight: 500;
+  font-size: 15vmin;
   color: white;
-}
-
-/* ВЕРХНИЙ ТЕКСТОВЫЙ БЛОК */
-.final-bar.top {
-  height: 15vmin;
-  background-color: #FF4431;
-  font-size: 15vmin;
+  display: flex;
+  overflow: hidden;
+  align-items: center;
   line-height: 1.2;
 }
 
-/* СРЕДНИЙ ТЕКСТОВЫЙ БЛОК */
-.final-bar.middle {
-  height: 15vmin;
-  background-color: #33BEFF;
-  font-size: 15vmin;
-  line-height: 1.2;
-}
-
-/* НИЖНИЙ ТЕКСТОВЫЙ БЛОК */
 .final-bar.bottom {
   height: 7.5vmin;
-  background-color: #2B50AA;
   font-size: 6vmin;
-  line-height: 1.2;
+  background-color: #2B50AA;
+}
+
+.final-bar.top { background-color: #FF4431; }
+.final-bar.middle { background-color: #33BEFF; }
+
+/* ===== НОВАЯ АНИМАЦИЯ — ТОЛЬКО ЭТО ===== */
+.marquee-wrapper {
+  display: flex;
+  white-space: nowrap;
+  animation: marquee-left 6s linear infinite;
+}
+
+.marquee-wrapper.reverse {
+  animation: marquee-right 3s linear infinite;
+}
+
+.marquee-wrapper span {
+  padding: 0 2vw;
+  flex-shrink: 0;
+}
+
+@keyframes marquee-left {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-16.66%); }
+}
+
+@keyframes marquee-right {
+  0% { transform: translateX(-16.66%); }
+  100% { transform: translateX(0); }
 }
 
 /* ПРОСТРАНСТВО */
@@ -647,9 +626,4 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-}
-
-/* ОБЩИЙ ТЕКСТ */
-.final-text {
-  padding: 0 10px;
 }
