--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@
   background-image: url('../images/yellow\ big\ ear.svg');
 }
 
-/* === ПРАВЫЕ УШИ === */
+/* УШИ СПРАВА */
 .ears-right {
   position: absolute;
   top: 0;
@@ -253,60 +253,80 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
   z-index: 1;
-  animation: scrollUp 8s linear infinite;
+  animation: scrollUp 5s linear infinite;
 }
 
 .ears-right:hover {
   animation-play-state: paused;
+}
+/* === АНИМАЦИЯ === */
+.ears-left, .ears-right {
+  position: absolute;
+  top: 0;
+  width: 25vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  animation: scrollUp 8s linear infinite;
+}
+
+.ears-left:hover, .ears-right:hover {
+  animation-play-state: paused;
+}
+
+.ears-right {
+  right: 0;
+  z-index: 1;
 }
 
 .ears-right .ear {
   transform: scaleX(-1);
 }
 
-/* Стили для правых ушей */
-.ears-right .ear:nth-of-type(1),
-.ears-right .ear:nth-of-type(7) {
+@keyframes scrollUp {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-150vw); } /* 6 ушей × 25vw */
+}
+.ears-right .ear {
+  width: 100%;
+  height: 25vw;
+  border: 5px solid rgb(0, 0, 0);
+  flex-shrink: 0;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  transform: scaleX(-1);
+}
+.ears-right .ear:nth-of-type(1) {
   background-color: #05C1F1;
   background-image: url('../images/yellow ear.svg');
 }
 
-.ears-right .ear:nth-of-type(2),
-.ears-right .ear:nth-of-type(8) {
+.ears-right .ear:nth-of-type(2) {
   background-color: #FF4431;
   background-image: url('../images/blue ear.svg');
 }
 
-.ears-right .ear:nth-of-type(3),
-.ears-right .ear:nth-of-type(9) {
+.ears-right .ear:nth-of-type(3) {
   background-color: #F7DE1C;
   background-image: url('../images/purple ear.svg');
 }
 
-.ears-right .ear:nth-of-type(4),
-.ears-right .ear:nth-of-type(10) {
+.ears-right .ear:nth-of-type(4) {
   background-color: #01B37F;
   background-image: url('../images/pink ear.svg');
 }
 
-.ears-right .ear:nth-of-type(5),
-.ears-right .ear:nth-of-type(11) {
+.ears-right .ear:nth-of-type(5) {
   background-color: #FF8CBD;
   background-image: url('../images/red ear.svg');
 }
 
-.ears-right .ear:nth-of-type(6),
-.ears-right .ear:nth-of-type(12) {
+.ears-right .ear:nth-of-type(6) {
   background-color: #7A59A4;
   background-image: url('../images/yellow big ear.svg');
-}
-
-/* === АНИМАЦИЯ === */
-@keyframes scrollUp {
-  0% { transform: translateY(0); }
-  100% { transform: translateY(-150vw); } /* 6 × 25vw */
 }
 /* ГЛАЗА СЛЕВА */
 .center-left-panel {
@@ -433,6 +453,40 @@
   background-size: contain;
   background-position: center;
 } 
+.center-left-panel,
+.center-right-panel {
+  animation: scrollEyes 8s linear infinite;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.center-left-panel:hover,
+.center-right-panel:hover {
+  animation-play-state: paused;
+}
+
+/* АНИМАЦИЯ ВНИЗ (противоположно ушам) */
+@keyframes scrollEyes {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-150vw); } /* ← 6 глаз × 25vw */
+}
+.center-left-panel,
+.center-right-panel {
+  animation: scrollEyesDown 8s linear infinite;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.center-left-panel:hover,
+.center-right-panel:hover {
+  animation-play-state: paused;
+}
+
+@keyframes scrollEyesDown {
+  0% { transform: translateY(-150vw); } /* ← начинаем с дубликатов */
+  100% { transform: translateY(0); }     /* ← уезжаем вниз */
+}
+
 /* БЛОК С НОСАМИ */
 .noses-row {
   position: absolute;
@@ -502,6 +556,19 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+}
+.noses-row {
+  overflow: hidden; /* ← обрезаем то, что выходит */
+  animation: scrollNoses 10s linear infinite;
+}
+
+.noses-row:hover {
+  animation-play-state: paused;
+}
+
+@keyframes scrollNoses {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-50%); } /* ← 14 носов = 2×, сдвиг на 1 набор */
 }
 /* РОТ И РУКИ */
 .mouth-container {
